klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/SymmetricalAssociationErrorTest.klass
package dummy

association DummyAssociation
{
    source: DummyClass[1..1];
    target: DummyClass[1..1];
    
    relationship this.id == DummyClass.id
}

class DummyClass
{
    id: Long key;
}
